--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-session": "^1.18.1",
+    "morgan": "^1.10.0",
+    "path": "^0.12.7",
+    "url": "^0.11.4"
   },
   "repository": {
     "type": "git",
