--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "description": "const express = require('express'); const bodyParser = require('body-parser'); const db = require('./db');\r const router = express.Router(); router.use(bodyParser.json()); router.post('/tasks', async (req, res) => { const { title, description, due_date } = req.body; const newTask = await db.createTask({ title, description, due_date }); res.json(newTask); });",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "mongoose": "^8.14.2",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "url": "^0.11.4"
