--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo-app",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node app.js",
@@ -20,8 +20,7 @@
     "express-session": "^1.18.1",
     "mongoose": "^8.14.2",
     "morgan": "^1.10.0",
-    "path-to-regexp": "^0.1.12",
-    "url": "^0.11.4"
+    "router": "^2.2.0"
   },
   "repository": {
     "type": "git",
@@ -32,4 +31,3 @@
   },
   "homepage": "https://github.com/the-Soke/To-Do-list#readme"
 }
- 
